--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
     </head>
     <body>
         <script type="module" src="script.js"></script>
+        
+
+    <h2>Events</h2>
+        <a href="button.html">Button OnClick Event</a><br/>
+        <a href="mouse.html">Mouse Over or Out Event</a><br/>
+    <h2>Cookies</h2>
+        <a href="cookiewrite.html">How to write a cookie.</a><br/>
+        <a href="cookieread.html">How to read a cookie.</a><br/>
+        <a href="cookieexpire.html">How to set a cookie to expire.</a><br/>
+        <a href="cookiedelete.html">How to delete a cookie.</a><br/>
+
+    <h2>Boxes</h2>
+        <a href="boxalert.html">Generate an alert box.</a><br/>
+        <a href="boxconfirmation.html">Generate a confirmation box.</a><br/>
+        <a href="boxprompt.html">Generate a box with a prompt and an input.</a><br/>
+
+    <h2>Redirects</h2>
+        <a href="redirect.html">How to redirect pages/windows.</a><br/>
+
+    <h2>Void use</h2>
+        <a href="voiduse.html">Use of Void in JavaScript</a><br/>
+
+    <h2>Open Print Dialog</h2>
+        <a href="print.html">How to open the print dialog box (to print screen).</a><br/>
+
     </body>
 </html>
