--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
     <h2>Open Print Dialog</h2>
         <a href="print.html">How to open the print dialog box (to print screen).</a><br/>
 
+    <h2>Objects</h2>
+        <a href="objects.html">JavaScript Objects.</a><br/>
     </body>
 </html>
